<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pet2Pet</string>
    <string name="title_home">Pagina Principal</string>
    <string name="title_dashboard">Tablero</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_events">Eventos</string>
    <string name="title_inicia">Inicia Sesion</string>
    <string name="title_profile">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Login strings -->
    <string name="welcome_message">¡Bienvenido %1$s!</string>
    <string name="error_campos_vacios">Por favor, complete todos los campos.</string>
    <string name="error_email_invalido">Por favor, ingrese un email válido.</string>
    <string name="error_password_corto">La contraseña debe tener al menos 8 caracteres.</string>
    <string name="error_conexion">Error de conexión. Por favor, verifica tu conexión a internet.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string-array name="gender_array">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    // Create post strings
    <string name="add_post_description">Agregar nueva publicación</string>

</resources>